# synthetic_social_persona_tweets

./: README.md  generate_posts.py  pyproject.toml
tests/: test_data_structures.py  test_edge_cases.py  test_persona_mappings.py
