[project]
name = "social-media-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.33.0",
    "openai>=1.85.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "sqlitedict>=2.1.0",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
